feat: Invalidate main.rb cache
Useful when developing mobile games

--- a/template/index.html
+++ b/template/index.html
@@ -5,7 +5,7 @@
     <title>DXOpal game</title>
     <script type="text/javascript" src="dxopal.min.js"></script>
     <script type="text/ruby">
-      DXOpal.dump_error{ require_remote 'main.rb' }
+      DXOpal.dump_error{ require_remote "main.rb?#{Time.now}" }
     </script>
   </head>
 
